y.output
Terminaux inutilisés dans la grammaire

    tMAIN
    tPRINTF
    tRETURN
    tCONST
    tSUB
    tDIV
    tINF
    tSUP
    tEQUAL
    tDIF


État 23 conflits: 4 décalage/réduction
État 24 conflits: 4 décalage/réduction
État 25 conflits: 4 décalage/réduction
État 35 conflits: 4 décalage/réduction
État 36 conflits: 1 réduction/réduction
État 63 conflits: 2 décalage/réduction
État 64 conflits: 2 décalage/réduction
État 68 conflits: 4 décalage/réduction


Grammaire

    0 $accept: Program $end

    1 Program: Funs

    2 Funs: %empty
    3     | Fun Funs

    4 Fun: tINT tID tOP Params tCP tOB Body tCB

    5 Params: %empty
    6       | tINT tID ParamsNext

    7 ParamsNext: %empty
    8           | tCOM tINT tID ParamsNext

    9 Body: Declarations Content
   10     | Content

   11 Declarations: tINT DecNext tSC

   12 DecNext: tID tCOM DecNext
   13        | tID
   14        | Affectations
   15        | Affectations tCOM DecNext

   16 Affectations: tID tEQ Valeur

   17 Valeur: Valeur tADD Valeur
   18       | Valeur tMUL Valeur
   19       | tNB
   20       | tID
   21       | tOP Valeur tCP

   22 BoucleIf: tIF tOP Condition tCP tOB Content tCB SuiteIf

   23 SuiteIf: %empty
   24        | tELSE tOB Content tCB
   25        | tELSE tIF tOP Condition tCP tOB Content tCB SuiteIf

   26 BoucleWhile: tWHILE tOP Condition tCP tOB Content tCB Content

   27 Condition: tTRUE
   28          | tFALSE

   29 Content: %empty
   30        | Declarations Content
   31        | Affectations Content
   32        | BoucleIf Content
   33        | BoucleWhile Content


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tMAIN (258)
    tPRINTF (259)
    tRETURN (260)
    tIF (261) 22 25
    tELSE (262) 24 25
    tWHILE (263) 26
    tTRUE (264) 27
    tFALSE (265) 28
    tOP (266) 4 21 22 25 26
    tCP (267) 4 21 22 25 26
    tOB (268) 4 22 24 25 26
    tCB (269) 4 22 24 25 26
    tCONST (270)
    tINT (271) 4 6 8 11
    tCOM (272) 8 12 15
    tSC (273) 11
    tADD (274) 17
    tSUB (275)
    tMUL (276) 18
    tDIV (277)
    tEQ (278) 16
    tINF (279)
    tSUP (280)
    tEQUAL (281)
    tDIF (282)
    tNB <nb> (283) 19
    tID <var> (284) 4 6 8 12 13 16 20


Non-terminaux, suivis des règles où ils apparaissent

    $accept (30)
        à gauche: 0
    Program (31)
        à gauche: 1
        à droite: 0
    Funs (32)
        à gauche: 2 3
        à droite: 1 3
    Fun (33)
        à gauche: 4
        à droite: 3
    Params (34)
        à gauche: 5 6
        à droite: 4
    ParamsNext (35)
        à gauche: 7 8
        à droite: 6 8
    Body (36)
        à gauche: 9 10
        à droite: 4
    Declarations (37)
        à gauche: 11
        à droite: 9 30
    DecNext (38)
        à gauche: 12 13 14 15
        à droite: 11 12 15
    Affectations (39)
        à gauche: 16
        à droite: 14 15 31
    Valeur (40)
        à gauche: 17 18 19 20 21
        à droite: 16 17 18 21
    BoucleIf (41)
        à gauche: 22
        à droite: 32
    SuiteIf (42)
        à gauche: 23 24 25
        à droite: 22 25
    BoucleWhile (43)
        à gauche: 26
        à droite: 33
    Condition (44)
        à gauche: 27 28
        à droite: 22 25 26
    Content (45)
        à gauche: 29 30 31 32 33
        à droite: 9 10 22 24 25 26 30 31 32 33


État 0

    0 $accept: . Program $end

    tINT  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (Funs)

    Program  aller à l'état 2
    Funs     aller à l'état 3
    Fun      aller à l'état 4


État 1

    4 Fun: tINT . tID tOP Params tCP tOB Body tCB

    tID  décalage et aller à l'état 5


État 2

    0 $accept: Program . $end

    $end  décalage et aller à l'état 6


État 3

    1 Program: Funs .

    $défaut  réduction par utilisation de la règle 1 (Program)


État 4

    3 Funs: Fun . Funs

    tINT  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (Funs)

    Funs  aller à l'état 7
    Fun   aller à l'état 4


État 5

    4 Fun: tINT tID . tOP Params tCP tOB Body tCB

    tOP  décalage et aller à l'état 8


État 6

    0 $accept: Program $end .

    $défaut  accepter


État 7

    3 Funs: Fun Funs .

    $défaut  réduction par utilisation de la règle 3 (Funs)


État 8

    4 Fun: tINT tID tOP . Params tCP tOB Body tCB

    tINT  décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 5 (Params)

    Params  aller à l'état 10


État 9

    6 Params: tINT . tID ParamsNext

    tID  décalage et aller à l'état 11


État 10

    4 Fun: tINT tID tOP Params . tCP tOB Body tCB

    tCP  décalage et aller à l'état 12


État 11

    6 Params: tINT tID . ParamsNext

    tCOM  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 7 (ParamsNext)

    ParamsNext  aller à l'état 14


État 12

    4 Fun: tINT tID tOP Params tCP . tOB Body tCB

    tOB  décalage et aller à l'état 15


État 13

    8 ParamsNext: tCOM . tINT tID ParamsNext

    tINT  décalage et aller à l'état 16


État 14

    6 Params: tINT tID ParamsNext .

    $défaut  réduction par utilisation de la règle 6 (Params)


État 15

    4 Fun: tINT tID tOP Params tCP tOB . Body tCB

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tID     décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 29 (Content)

    Body          aller à l'état 21
    Declarations  aller à l'état 22
    Affectations  aller à l'état 23
    BoucleIf      aller à l'état 24
    BoucleWhile   aller à l'état 25
    Content       aller à l'état 26


État 16

    8 ParamsNext: tCOM tINT . tID ParamsNext

    tID  décalage et aller à l'état 27


État 17

   22 BoucleIf: tIF . tOP Condition tCP tOB Content tCB SuiteIf

    tOP  décalage et aller à l'état 28


État 18

   26 BoucleWhile: tWHILE . tOP Condition tCP tOB Content tCB Content

    tOP  décalage et aller à l'état 29


État 19

   11 Declarations: tINT . DecNext tSC

    tID  décalage et aller à l'état 30

    DecNext       aller à l'état 31
    Affectations  aller à l'état 32


État 20

   16 Affectations: tID . tEQ Valeur

    tEQ  décalage et aller à l'état 33


État 21

    4 Fun: tINT tID tOP Params tCP tOB Body . tCB

    tCB  décalage et aller à l'état 34


État 22

    9 Body: Declarations . Content
   30 Content: Declarations . Content

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tID     décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 29 (Content)

    Declarations  aller à l'état 35
    Affectations  aller à l'état 23
    BoucleIf      aller à l'état 24
    BoucleWhile   aller à l'état 25
    Content       aller à l'état 36


État 23

   31 Content: Affectations . Content

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tID     décalage et aller à l'état 20

    tIF       [réduction par utilisation de la règle 29 (Content)]
    tWHILE    [réduction par utilisation de la règle 29 (Content)]
    tINT      [réduction par utilisation de la règle 29 (Content)]
    tID       [réduction par utilisation de la règle 29 (Content)]
    $défaut  réduction par utilisation de la règle 29 (Content)

    Declarations  aller à l'état 35
    Affectations  aller à l'état 23
    BoucleIf      aller à l'état 24
    BoucleWhile   aller à l'état 25
    Content       aller à l'état 37


État 24

   32 Content: BoucleIf . Content

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tID     décalage et aller à l'état 20

    tIF       [réduction par utilisation de la règle 29 (Content)]
    tWHILE    [réduction par utilisation de la règle 29 (Content)]
    tINT      [réduction par utilisation de la règle 29 (Content)]
    tID       [réduction par utilisation de la règle 29 (Content)]
    $défaut  réduction par utilisation de la règle 29 (Content)

    Declarations  aller à l'état 35
    Affectations  aller à l'état 23
    BoucleIf      aller à l'état 24
    BoucleWhile   aller à l'état 25
    Content       aller à l'état 38


État 25

   33 Content: BoucleWhile . Content

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tID     décalage et aller à l'état 20

    tIF       [réduction par utilisation de la règle 29 (Content)]
    tWHILE    [réduction par utilisation de la règle 29 (Content)]
    tINT      [réduction par utilisation de la règle 29 (Content)]
    tID       [réduction par utilisation de la règle 29 (Content)]
    $défaut  réduction par utilisation de la règle 29 (Content)

    Declarations  aller à l'état 35
    Affectations  aller à l'état 23
    BoucleIf      aller à l'état 24
    BoucleWhile   aller à l'état 25
    Content       aller à l'état 39


État 26

   10 Body: Content .

    $défaut  réduction par utilisation de la règle 10 (Body)


État 27

    8 ParamsNext: tCOM tINT tID . ParamsNext

    tCOM  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 7 (ParamsNext)

    ParamsNext  aller à l'état 40


État 28

   22 BoucleIf: tIF tOP . Condition tCP tOB Content tCB SuiteIf

    tTRUE   décalage et aller à l'état 41
    tFALSE  décalage et aller à l'état 42

    Condition  aller à l'état 43


État 29

   26 BoucleWhile: tWHILE tOP . Condition tCP tOB Content tCB Content

    tTRUE   décalage et aller à l'état 41
    tFALSE  décalage et aller à l'état 42

    Condition  aller à l'état 44


État 30

   12 DecNext: tID . tCOM DecNext
   13        | tID .
   16 Affectations: tID . tEQ Valeur

    tCOM  décalage et aller à l'état 45
    tEQ   décalage et aller à l'état 33

    $défaut  réduction par utilisation de la règle 13 (DecNext)


État 31

   11 Declarations: tINT DecNext . tSC

    tSC  décalage et aller à l'état 46


État 32

   14 DecNext: Affectations .
   15        | Affectations . tCOM DecNext

    tCOM  décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 14 (DecNext)


État 33

   16 Affectations: tID tEQ . Valeur

    tOP  décalage et aller à l'état 48
    tNB  décalage et aller à l'état 49
    tID  décalage et aller à l'état 50

    Valeur  aller à l'état 51


État 34

    4 Fun: tINT tID tOP Params tCP tOB Body tCB .

    $défaut  réduction par utilisation de la règle 4 (Fun)


État 35

   30 Content: Declarations . Content

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tID     décalage et aller à l'état 20

    tIF       [réduction par utilisation de la règle 29 (Content)]
    tWHILE    [réduction par utilisation de la règle 29 (Content)]
    tINT      [réduction par utilisation de la règle 29 (Content)]
    tID       [réduction par utilisation de la règle 29 (Content)]
    $défaut  réduction par utilisation de la règle 29 (Content)

    Declarations  aller à l'état 35
    Affectations  aller à l'état 23
    BoucleIf      aller à l'état 24
    BoucleWhile   aller à l'état 25
    Content       aller à l'état 52


État 36

    9 Body: Declarations Content .
   30 Content: Declarations Content .

    tCB       réduction par utilisation de la règle 9 (Body)
    tCB       [réduction par utilisation de la règle 30 (Content)]
    $défaut  réduction par utilisation de la règle 9 (Body)


État 37

   31 Content: Affectations Content .

    $défaut  réduction par utilisation de la règle 31 (Content)


État 38

   32 Content: BoucleIf Content .

    $défaut  réduction par utilisation de la règle 32 (Content)


État 39

   33 Content: BoucleWhile Content .

    $défaut  réduction par utilisation de la règle 33 (Content)


État 40

    8 ParamsNext: tCOM tINT tID ParamsNext .

    $défaut  réduction par utilisation de la règle 8 (ParamsNext)


État 41

   27 Condition: tTRUE .

    $défaut  réduction par utilisation de la règle 27 (Condition)


État 42

   28 Condition: tFALSE .

    $défaut  réduction par utilisation de la règle 28 (Condition)


État 43

   22 BoucleIf: tIF tOP Condition . tCP tOB Content tCB SuiteIf

    tCP  décalage et aller à l'état 53


État 44

   26 BoucleWhile: tWHILE tOP Condition . tCP tOB Content tCB Content

    tCP  décalage et aller à l'état 54


État 45

   12 DecNext: tID tCOM . DecNext

    tID  décalage et aller à l'état 30

    DecNext       aller à l'état 55
    Affectations  aller à l'état 32


État 46

   11 Declarations: tINT DecNext tSC .

    $défaut  réduction par utilisation de la règle 11 (Declarations)


État 47

   15 DecNext: Affectations tCOM . DecNext

    tID  décalage et aller à l'état 30

    DecNext       aller à l'état 56
    Affectations  aller à l'état 32


État 48

   21 Valeur: tOP . Valeur tCP

    tOP  décalage et aller à l'état 48
    tNB  décalage et aller à l'état 49
    tID  décalage et aller à l'état 50

    Valeur  aller à l'état 57


État 49

   19 Valeur: tNB .

    $défaut  réduction par utilisation de la règle 19 (Valeur)


État 50

   20 Valeur: tID .

    $défaut  réduction par utilisation de la règle 20 (Valeur)


État 51

   16 Affectations: tID tEQ Valeur .
   17 Valeur: Valeur . tADD Valeur
   18       | Valeur . tMUL Valeur

    tADD  décalage et aller à l'état 58
    tMUL  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 16 (Affectations)


État 52

   30 Content: Declarations Content .

    $défaut  réduction par utilisation de la règle 30 (Content)


État 53

   22 BoucleIf: tIF tOP Condition tCP . tOB Content tCB SuiteIf

    tOB  décalage et aller à l'état 60


État 54

   26 BoucleWhile: tWHILE tOP Condition tCP . tOB Content tCB Content

    tOB  décalage et aller à l'état 61


État 55

   12 DecNext: tID tCOM DecNext .

    $défaut  réduction par utilisation de la règle 12 (DecNext)


État 56

   15 DecNext: Affectations tCOM DecNext .

    $défaut  réduction par utilisation de la règle 15 (DecNext)


État 57

   17 Valeur: Valeur . tADD Valeur
   18       | Valeur . tMUL Valeur
   21       | tOP Valeur . tCP

    tCP   décalage et aller à l'état 62
    tADD  décalage et aller à l'état 58
    tMUL  décalage et aller à l'état 59


État 58

   17 Valeur: Valeur tADD . Valeur

    tOP  décalage et aller à l'état 48
    tNB  décalage et aller à l'état 49
    tID  décalage et aller à l'état 50

    Valeur  aller à l'état 63


État 59

   18 Valeur: Valeur tMUL . Valeur

    tOP  décalage et aller à l'état 48
    tNB  décalage et aller à l'état 49
    tID  décalage et aller à l'état 50

    Valeur  aller à l'état 64


État 60

   22 BoucleIf: tIF tOP Condition tCP tOB . Content tCB SuiteIf

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tID     décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 29 (Content)

    Declarations  aller à l'état 35
    Affectations  aller à l'état 23
    BoucleIf      aller à l'état 24
    BoucleWhile   aller à l'état 25
    Content       aller à l'état 65


État 61

   26 BoucleWhile: tWHILE tOP Condition tCP tOB . Content tCB Content

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tID     décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 29 (Content)

    Declarations  aller à l'état 35
    Affectations  aller à l'état 23
    BoucleIf      aller à l'état 24
    BoucleWhile   aller à l'état 25
    Content       aller à l'état 66


État 62

   21 Valeur: tOP Valeur tCP .

    $défaut  réduction par utilisation de la règle 21 (Valeur)


État 63

   17 Valeur: Valeur . tADD Valeur
   17       | Valeur tADD Valeur .
   18       | Valeur . tMUL Valeur

    tADD  décalage et aller à l'état 58
    tMUL  décalage et aller à l'état 59

    tADD      [réduction par utilisation de la règle 17 (Valeur)]
    tMUL      [réduction par utilisation de la règle 17 (Valeur)]
    $défaut  réduction par utilisation de la règle 17 (Valeur)


État 64

   17 Valeur: Valeur . tADD Valeur
   18       | Valeur . tMUL Valeur
   18       | Valeur tMUL Valeur .

    tADD  décalage et aller à l'état 58
    tMUL  décalage et aller à l'état 59

    tADD      [réduction par utilisation de la règle 18 (Valeur)]
    tMUL      [réduction par utilisation de la règle 18 (Valeur)]
    $défaut  réduction par utilisation de la règle 18 (Valeur)


État 65

   22 BoucleIf: tIF tOP Condition tCP tOB Content . tCB SuiteIf

    tCB  décalage et aller à l'état 67


État 66

   26 BoucleWhile: tWHILE tOP Condition tCP tOB Content . tCB Content

    tCB  décalage et aller à l'état 68


État 67

   22 BoucleIf: tIF tOP Condition tCP tOB Content tCB . SuiteIf

    tELSE  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 23 (SuiteIf)

    SuiteIf  aller à l'état 70


État 68

   26 BoucleWhile: tWHILE tOP Condition tCP tOB Content tCB . Content

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tID     décalage et aller à l'état 20

    tIF       [réduction par utilisation de la règle 29 (Content)]
    tWHILE    [réduction par utilisation de la règle 29 (Content)]
    tINT      [réduction par utilisation de la règle 29 (Content)]
    tID       [réduction par utilisation de la règle 29 (Content)]
    $défaut  réduction par utilisation de la règle 29 (Content)

    Declarations  aller à l'état 35
    Affectations  aller à l'état 23
    BoucleIf      aller à l'état 24
    BoucleWhile   aller à l'état 25
    Content       aller à l'état 71


État 69

   24 SuiteIf: tELSE . tOB Content tCB
   25        | tELSE . tIF tOP Condition tCP tOB Content tCB SuiteIf

    tIF  décalage et aller à l'état 72
    tOB  décalage et aller à l'état 73


État 70

   22 BoucleIf: tIF tOP Condition tCP tOB Content tCB SuiteIf .

    $défaut  réduction par utilisation de la règle 22 (BoucleIf)


État 71

   26 BoucleWhile: tWHILE tOP Condition tCP tOB Content tCB Content .

    $défaut  réduction par utilisation de la règle 26 (BoucleWhile)


État 72

   25 SuiteIf: tELSE tIF . tOP Condition tCP tOB Content tCB SuiteIf

    tOP  décalage et aller à l'état 74


État 73

   24 SuiteIf: tELSE tOB . Content tCB

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tID     décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 29 (Content)

    Declarations  aller à l'état 35
    Affectations  aller à l'état 23
    BoucleIf      aller à l'état 24
    BoucleWhile   aller à l'état 25
    Content       aller à l'état 75


État 74

   25 SuiteIf: tELSE tIF tOP . Condition tCP tOB Content tCB SuiteIf

    tTRUE   décalage et aller à l'état 41
    tFALSE  décalage et aller à l'état 42

    Condition  aller à l'état 76


État 75

   24 SuiteIf: tELSE tOB Content . tCB

    tCB  décalage et aller à l'état 77


État 76

   25 SuiteIf: tELSE tIF tOP Condition . tCP tOB Content tCB SuiteIf

    tCP  décalage et aller à l'état 78


État 77

   24 SuiteIf: tELSE tOB Content tCB .

    $défaut  réduction par utilisation de la règle 24 (SuiteIf)


État 78

   25 SuiteIf: tELSE tIF tOP Condition tCP . tOB Content tCB SuiteIf

    tOB  décalage et aller à l'état 79


État 79

   25 SuiteIf: tELSE tIF tOP Condition tCP tOB . Content tCB SuiteIf

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tID     décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 29 (Content)

    Declarations  aller à l'état 35
    Affectations  aller à l'état 23
    BoucleIf      aller à l'état 24
    BoucleWhile   aller à l'état 25
    Content       aller à l'état 80


État 80

   25 SuiteIf: tELSE tIF tOP Condition tCP tOB Content . tCB SuiteIf

    tCB  décalage et aller à l'état 81


État 81

   25 SuiteIf: tELSE tIF tOP Condition tCP tOB Content tCB . SuiteIf

    tELSE  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 23 (SuiteIf)

    SuiteIf  aller à l'état 82


État 82

   25 SuiteIf: tELSE tIF tOP Condition tCP tOB Content tCB SuiteIf .

    $défaut  réduction par utilisation de la règle 25 (SuiteIf)
